# SP2022-MID1

./: .gitignore  CMakeLists.txt  main.c
additional-exercises/: README.md  ex1.c  ex2.c  ex3.c  ex4.c  ex5.c
auditory-exercises/: README.md
auditory-exercises/aud-ex-1/: task1.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
laboratory-exercises/: README.md
laboratory-exercises/lab-ex-1/: task1.c  task2.c  task3.c
laboratory-exercises/lab-ex-2/: task1.c  task2.c  task3.c
laboratory-exercises/lab-ex-3/: task1.c  task2.c  task3.c
laboratory-exercises/lab-ex-4/: task1.c  task2.c  task3.c
midterm-exercises/: README.md  task10.c  task11.c  task12.c  task13.c  task2.c  task3-variation.c  task3.c  task4.c  task7.c
