cmake_minimum_required(VERSION 3.23)
project(SP2022_MID1 C)

set(CMAKE_C_STANDARD 99)

add_executable(main main.c)

add_executable(aud-1-task-1 auditory-exercises/aud-ex-1/task1.c auditory-exercises/aud-ex-1/task1.c)
add_executable(aud-1-task-2 auditory-exercises/aud-ex-1/task2.c auditory-exercises/aud-ex-1/task2.c)
add_executable(aud-1-task-3 auditory-exercises/aud-ex-1/task3.c auditory-exercises/aud-ex-1/task3.c)
add_executable(aud-1-task-4 auditory-exercises/aud-ex-1/task4.c auditory-exercises/aud-ex-1/task4.c)
add_executable(aud-1-task-5 auditory-exercises/aud-ex-1/task5.c auditory-exercises/aud-ex-1/task5.c)
add_executable(aud-1-task-6 auditory-exercises/aud-ex-1/task6.c auditory-exercises/aud-ex-1/task6.c)
add_executable(aud-1-task-7 auditory-exercises/aud-ex-1/task7.c auditory-exercises/aud-ex-1/task7.c)
add_executable(aud-1-task-8 auditory-exercises/aud-ex-1/task8.c auditory-exercises/aud-ex-1/task8.c)
add_executable(aud-1-task-9 auditory-exercises/aud-ex-1/task9.c auditory-exercises/aud-ex-1/task9.c)

add_executable(lab-1-task-1 laboratory-exercises/lab-ex-1/task1.c laboratory-exercises/lab-ex-1/task1.c)
add_executable(lab-1-task-2 laboratory-exercises/lab-ex-1/task2.c laboratory-exercises/lab-ex-1/task2.c)
add_executable(lab-1-task-3 laboratory-exercises/lab-ex-1/task3.c laboratory-exercises/lab-ex-1/task3.c)